--- a/index.html
+++ b/index.html
@@ -8,8 +8,45 @@
 </head>
 <body>
     <header>
-        
+        <h1>Practica 5 texto</h1>
     </header>
-    
+    <!-- enlaces a las paginas -->
+    <nav>
+        <a href="https://www.cervantes.es/bibliotecas_documentacion_espanol/biografias/pekin_antonio_machado.htm/">Biografia de Antonio Machado</a> | <a href="https://es.wikipedia.org/wiki/Antonio_Machado/">Antonio Machado en wikipedia</a>
+    </nav>
+    <!-- texto en pantalla con pre -->
+    <main>
+        <h2>Amanecer en Valencia. Antonio Machado.</h2>
+        <pre>Estas rachas de marzo, en los desvanes
+--hacia la mar-- del tiempo; la paloma
+de pluma tornasol, los tulipanes
+gigantes del jardin, y el sol que asoma,
+bola de fuego entre dorada bruma,
+a iluminar la tierra valenciana...
+¡Hervor de leche y plata añil y espuma,
+y velas blancas en la mar latina!
+Valencia de fecundas primaveras,
+de floridas alumnias y arrozales,
+feliz quiero cantarte, como eras,
+domando a un ancho tio en tus canales,
+al dios marino con tuu albuferas,
+al cenntauro de a,or con tus rosales
+        </pre>
+        <img src="img/machado.jpg.jpg" height="100px" width="100px">
+        <hr>
+        <br>
+        <h2> Valencia Ciudad de las ciencias</h2>
+        <pre>La Ciudad de las ciencias incluye
+
+   1. Palau de les arts
+   2. Hemisferic
+   3. Umbracle
+   4. Museo de las ciencias
+   5. Oceanografic
+        </pre>
+        <iframe src="web_ciencies.html" style="width: 70%; height: 300px;"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3080.6395062609436!2d-0.3526844487131438!3d39.454879221393824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6048e9d19b4381%3A0x62eb4407a5ebf894!2sCiudad%20de%20las%20Artes%20y%20las%20Ciencias!5e0!3m2!1ses!2ses!4v1573124915739!5m2!1ses!2ses" width="20%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>"
+        <iframe src="folleto.html" style="width: 23%; height: 300px;"></iframe>
+
 </body>
 </html>
