--- a/hemisferic.html
+++ b/hemisferic.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Folleto</title>
+    <title>Hemisferic</title>
 </head>
 <body>
     <object 
         type="text/html"
-        data="img/folleto.pdf"
+        data="img/hemisferic.pdf"
         style="width: 110%; height: 300px;">
 
 </body>
