--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@ al cenntauro de a,or con tus rosales
         </pre>
         <img src="img/machado.jpg.jpg" height="100px" width="100px">
         <hr>
-        <br>
         <h2> Valencia Ciudad de las ciencias</h2>
         <pre>La Ciudad de las ciencias incluye
 
@@ -47,6 +46,17 @@ al cenntauro de a,or con tus rosales
         <iframe src="web_ciencies.html" style="width: 70%; height: 300px;"></iframe>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3080.6395062609436!2d-0.3526844487131438!3d39.454879221393824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6048e9d19b4381%3A0x62eb4407a5ebf894!2sCiudad%20de%20las%20Artes%20y%20las%20Ciencias!5e0!3m2!1ses!2ses!4v1573124915739!5m2!1ses!2ses" width="20%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>"
         <iframe src="folleto.html" style="width: 23%; height: 300px;"></iframe>
+        <iframe src="hemisferic.html" style="width: 23%; height: 300px;"></iframe>
+        <iframe width="23%" height="300px" src="https://www.youtube.com/embed/iL8wtRoYNLc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"
+    </main>
+    <hr>
+    <footer>
+        <address>
+            Autor: Pablo Catalina Castelló <br>
+            Correo: pablocatalina08@gmail.com
+        </address>
+        <p>Ultima modificación: 07/11/2019</p>
+    </footer>
 
 </body>
 </html>
